--- a/style.css
+++ b/style.css
@@ -1,17 +1,31 @@
+@import url('https://fonts.googleapis.com/css2?family=Nunito+Sans&family=Roboto&display=swap');
+
 body {
     background-color:white;
     color: black;
-    font-family: Verdana, Helvetica, sans-serif;
+    font-family: 'Roboto', sans-serif;
+    letter-spacing: 1px;
+    padding:2em;
   }
   
 h1 {
+    color: #1b4965;
+    font-weight: bold;
+    text-transform: capitalize;
     font-size: 1.4em;
-    padding: 1.2em 0 8px 0;
+    padding: 1.2em 0 0 0;
 }
 
 h1:first-of-type, nav li:first-of-type {
     padding-top: 20px;
   }
+
+nav h1 {
+    color: #1b4965;
+    font-weight: bold;
+    text-transform: uppercase;
+    text-align: center;
+}
   
 h2 {
     font-size: 1.8em;
@@ -28,36 +42,40 @@ a {
 }
 
 .img-left, .img-right {
-    border: 2px solid black;
+    border: 1px solid black;
 }
 
 .img-right {
     float: right;
-    max-height: 50%;
+    margin-left: 15px;
+    /*  max-height: 50%;
     min-width: 50%;
+    */
 }
 
 .img-left {
     float: left;
+    margin-right: 15px;
 }
 
-
-
 .wrapper {
+    margin-top: 2em;
+    width: 80%;
     display: flex;  
     flex-flow: row wrap;
     border: 1px solid black;
+    justify-content: center; /* this isn't working...*/
 }
 
 .wrapper > * {
-    padding: 10px;
+    padding: 15px;
     flex: 1 100%;
 }
 
 .header {
     background: #1b4965;
     color:  white;
-    font-size: xx-large;
+    font-size: 2.5em;
     text-align: center;
 }
 
@@ -70,10 +88,12 @@ a {
 .main {
     text-align: left;
     background:#ede7e3;
+    line-height: 1.6;
+    padding: 30px;
 }
 
 .aside-1, .nav {
-    background: #dddddd;
+    background: #dfd4cd;
     margin: 0px;
 }
 
@@ -98,8 +118,4 @@ nav a:hover {
     .aside-1 { order: 1; } 
     .main    { order: 2; }
     .footer  { order: 3; }
-  }
-  
-  body {
-    padding: 2em; 
   }
